--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mad Lib</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
-   <input type="text" placeholder="adjective"
+    <h1>Recipe Mad Lib</h1>
+    <form>
+        <ul>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            </ul>
+    </form>
+    <p>Let's make(insert food item)! To make(food item from title) you first need to gather your ingredients. You'll
+        need(number) eggs, a (measurment) of milk, flour, sugar, and (adjective) butter. Start by (verb ending in -ing)
+        together the (adjective) ingredients in a bowl. Then, (adverb)(verb) in the milk, eggs, and (adjective) butter.
+        Once the (noun) is (adjective), you're ready to (verb)! Scoop the batter onto a/an (adjective)(noun) and cook
+        until all the bubbles (verb). The (adjective) part about making (food item from title) is piling them onto your
+        (noun), loading them with your (adjective) toppings, and digging in!</p>
 
-   +
-   +
 </body>
+
 </html>
