updated index and css

--- a/index.html
+++ b/index.html
@@ -6,27 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mad Lib</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<link rel="stylesheet" href="style.css">
+
 <body>
-    <h1>Recipe Mad Lib</h1>
+    <h1>Make your own Recipe!</h1>
     <form>
         <ul>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
-            <li><input id="textone" type="text" placeholder="insert food item"></li>
+            <li><input id="textone" type="text" placeholder="food"></li>
+            <li><input id="textone" type="text" placeholder="previous food item"></li>
+            <li><input id="textone" type="text" placeholder="number"></li>
+            <li><input id="textone" type="text" placeholder="measurment"></li>
+            <li><input id="textone" type="text" placeholder="adjective"></li>
+            <li><input id="textone" type="text" placeholder="verb ending in -ing"></li>
+            <li><input id="textone" type="text" placeholder="adjective"></li>
+            <li><input id="textone" type="text" placeholder="adverb"></li>
+            <li><input id="textone" type="text" placeholder="verb"></li>
+            <li><input id="textone" type="text" placeholder="adjective"></li>
+            <li><input id="textone" type="text" placeholder="noun"></li>
+            <li><input id="textone" type="text" placeholder="adjective"></li>
+            <li><input id="textone" type="text" placeholder="verb"></li>
+            <li><input id="textone" type="text" placeholder="adjective"></li>
+            <li><input id="textone" type="text" placeholder="noun"></li>
+            <li><input id="textone" type="text" placeholder="verb"></li>
+            <li><input id="textone" type="text" placeholder="adjective"></li>
+            <li><input id="textone" type="text" placeholder="food item from title"></li>
+            <li><input id="textone" type="text" placeholder="noun"></li>
+            <li><input id="textone" type="text" placeholder="adjective"></li>
             </ul>
     </form>
     <p>Let's make(insert food item)! To make(food item from title) you first need to gather your ingredients. You'll
