--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Make your own Recipe!</h1>
+    <h1>Mad Lib Recipe</h1>
     <form>
         <ul>
             <li><input id="textone" type="text" placeholder="food"></li>
@@ -35,8 +35,8 @@
             <li><input id="textone" type="text" placeholder="adjective"></li>
             </ul>
     </form>
-    <p>Let's make(insert food item)! To make(food item from title) you first need to gather your ingredients. You'll
-        need(number) eggs, a (measurment) of milk, flour, sugar, and (adjective) butter. Start by (verb ending in -ing)
+    <p>Let's make (food item)! To make (previous food item) you first need to gather your ingredients. You'll
+        need (number) egg(s), a (measurment) of milk, flour, sugar, and (adjective) butter. Start by (verb ending in -ing)
         together the (adjective) ingredients in a bowl. Then, (adverb)(verb) in the milk, eggs, and (adjective) butter.
         Once the (noun) is (adjective), you're ready to (verb)! Scoop the batter onto a/an (adjective)(noun) and cook
         until all the bubbles (verb). The (adjective) part about making (food item from title) is piling them onto your
